--- a/about.html
+++ b/about.html
@@ -7,22 +7,32 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>This is about page</h1>
+    <h1 style="margin-top: 50px;" class="details-title">About Html, Css & Javascript</h1>
     <section class="details">
-        <h1 class="details-title">About Html & Css</h1>
+       
         <div class="html-details">
             <img class="details-pic" src="./img/10946063.jpg" alt="">
            <div class="right">
-            <h2>What is Html?</h2>
-            <p>HTML (HyperText Markup Language) is the standard language used to create and design webpages. It structures content with elements like headings, paragraphs, links, images, and more, using tags and attributes. HTML provides the foundational framework for webpages, allowing browsers to display text, media, and interactive features to users.</p>
+            <h1 class="about-section-title">What is Html?</h1>
+            <p>HTML, or HyperText Markup Language, is the standard language used to create and structure content on the web. It consists of a series of elements represented by tags, which are used to enclose different parts of the content, such as headings, paragraphs, links, images, and other multimedia elements. HTML tags define the structure and layout of a web page by describing the different components and how they should be displayed in a browser. HTML is essential for web development as it provides the foundation upon which CSS (for styling) and JavaScript (for interactivity) are built.</p>
+            <button class="learn-btn">Learn More</button>
            </div>
         </div>
         <div class="css-details">
             <div class="left">
-                <h2>What is Css </h2>
-                <p>CSS (Cascading Style Sheets) is a stylesheet language used to describe the presentation and formatting of a document written in HTML. It controls the layout, colors, fonts, spacing, and overall visual appearance of webpages. CSS enables separation of content from design, allowing for more flexibility and easier maintenance of website aesthetics across multiple pages.</p>
+                <h1 class="about-section-title">What is Css </h1>
+                <p>CSS, or Cascading Style Sheets, is a stylesheet language used to describe the presentation of HTML documents. It allows web developers to control the layout, design, and appearance of web pages, including elements like colors, fonts, spacing, and positioning. CSS works by applying styles to HTML elements based on selectors, which can target tags, classes, or IDs. It enables the separation of content from design, making it easier to maintain and update the look of a website. CSS also supports responsive design, ensuring that web pages adapt to different screen sizes and devices for optimal user experience.</p>
+                <button class="learn-btn">Learn More</button>
             </div>
             <img class="details-pic" src="./img/css-coding.png" alt="">
+        </div>
+        <div class="js-details">
+            <img class="details-pic" src="./img/js.png" alt="">
+           <div class="right">
+            <h1 class="about-section-title">What is Javasript?</h1>
+            <p>JavaScript is a versatile, high-level programming language primarily used to create dynamic and interactive elements on web pages. Unlike HTML and CSS, which structure and style web content, JavaScript enables functionality such as form validation, content updates without page reloads, interactive maps, and animated graphics. It is executed on the client side by the web browser, which allows for immediate user feedback and a more engaging experience. JavaScript is integral to modern web development and is supported by all major browsers. Additionally, it can be used on the server side with environments like Node.js, broadening its application scope beyond just web pages.</p>
+            <button class="learn-btn">Learn More</button>
+           </div>
         </div>
     </section>
 </body>
