Full About page done by @abdullah2111

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p class="hero-para">
                 Effective web design enhances user experience, builds brand credibility, and drives engagement. A well-designed website can make the difference between a visitor and a loyal customer.
             </p>
-            <button class="hero-btn"><a href="">Explore more about me</a></button>
+            <button class="hero-btn"><a href="https://devabdullah.tech/" target="_blank">Explore more about me</a></button>
         </div>
     </section>
 
