--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Assignment-1</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body class="home-page">
     <!-- Navbar Start -->
     <nav>
         <div class="navWrap">
@@ -15,10 +15,10 @@
             </div>
             <div class="navItems">
                 <a class="navItem" href="index.html" >Home</a>
-            <a class="navItem" href="about.html" target="_blank">About</a>
-            <a class="navItem" href="Flex.html" target="_blank">Flex</a>
-            <a class="navItem" href="Grid.html" target="_blank">Grid</a>
-            <a class="navItem" href="gallary.html" target="_blank">Gallery</a>
+            <a class="navItem" href="about.html" >About</a>
+            <a class="navItem" href="Flex.html" ">Flex</a>
+            <a class="navItem" href="Grid.html">Grid</a>
+            <a class="navItem" href="gallary.html">Gallery</a>
             </div>
         </div>
     </nav>
