--- a/about.html
+++ b/about.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+     <!-- Navbar Start -->
+     <nav>
+        <div class="navWrap">
+            <div class="logo">
+                <h1>MIS 455</h1>
+            </div>
+            <div class="navItems">
+                <a class="navItem" href="index.html" >Home</a>
+            <a class="navItem" href="about.html" >About</a>
+            <a class="navItem" href="Flex.html" >Flex</a>
+            <a class="navItem" href="Grid.html" ">Grid</a>
+            <a class="navItem" href="gallary.html" >Gallery</a>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar End -->
+
+
     <h1 style="margin-top: 50px;" class="details-title">About Html, Css & Javascript</h1>
     <section class="details">
        
