gallery page  done by @abdullah2111

--- a/Flex.html
+++ b/Flex.html
@@ -31,7 +31,7 @@
             <p class="f-p">
                 Flexbox, or the Flexible Box Layout, is a CSS3 layout model that provides a more efficient way to design, align, and distribute space among items in a container, even when their sizes are unknown or dynamic. The flexible box layout module, usually referred to as flexbox, was designed as a one-dimensional layout model, and as a method that could offer space distribution between items in an interface and powerful alignment capabilities. This article gives an outline of the main features of flexbox, which we will be exploring in more detail in the rest of these guides.
             </p>
-            <button class="flex-btn"><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" target="_blank">Learn More</a></button>
+            <button class="flex-btn"><a href="https://youtu.be/kRS5ficucNM?si=h7FbNcqSepbSnyt3" target="_blank">Learn More</a></button>
         </div>
     </Section>
     <section class="flex-directtion">
