--- a/Grid.html
+++ b/Grid.html
@@ -31,7 +31,7 @@
         <div class="intro-details">
             <p>The CSS grid layout module excels at dividing a page into major regions or defining the relationship in terms of size, position, and layer, between parts of a control built from HTML primitives. Like tables, grid layout enables an author to align elements into columns and rows. However, many more layouts are either possible or easier with CSS grid than they were with tables. For example, a grid container's child elements could position themselves so they actually overlap and layer, similar to CSS positioned elements.
             </p>
-            <button class="flex-btn"><a href="https://www.joshwcomeau.com/css/interactive-guide-to-grid/" target="_blank">Learn More</a></button>
+            <button class="flex-btn"><a href="https://youtu.be/kEFIdXzQXYw?si=dpaIgB3cOAAjm6XM" target="_blank">Learn More</a></button>
         </div>
     </Section>
     <section class="grid-section">
