Some section background color and navbar color changed  by @abdullah2111

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <h1 style="margin-top: 50px;" class="details-title">About Html, Css & Javascript</h1>
     <section class="details">
        
-        <div class="html-details">
+        <div style="background-color: aliceblue;" class="html-details">
             <img class="details-pic" src="./img/10946063.jpg" alt="">
            <div class="right">
             <h1 class="about-section-title">What is Html?</h1>
@@ -36,7 +36,7 @@
             <button class="learn-btn"><a href="https://en.wikipedia.org/wiki/HTML" target="_blank">Learn More</a></button>
            </div>
         </div>
-        <div class="css-details">
+        <div style="background-color: #8800ff24;" class="css-details">
             <div class="left">
                 <h1 class="about-section-title">What is Css </h1>
                 <p>CSS, or Cascading Style Sheets, is a stylesheet language used to describe the presentation of HTML documents. It allows web developers to control the layout, design, and appearance of web pages, including elements like colors, fonts, spacing, and positioning. CSS works by applying styles to HTML elements based on selectors, which can target tags, classes, or IDs. It enables the separation of content from design, making it easier to maintain and update the look of a website. CSS also supports responsive design, ensuring that web pages adapt to different screen sizes and devices for optimal user experience.</p>
@@ -44,7 +44,7 @@
             </div>
             <img class="details-pic" src="./img/css-coding.png" alt="">
         </div>
-        <div class="js-details">
+        <div style="background-color: #ffcdcd59;" class="js-details">
             <img class="details-pic" src="./img/js.png" alt="">
            <div class="right">
             <h1 class="about-section-title">What is Javasript?</h1>
