gallery hero section paragraph font size changed  by @abdullah2111

--- a/gallary.html
+++ b/gallary.html
@@ -30,7 +30,7 @@
             <div class="header-part">
             <h1 class="details-title" style="margin-top: 50px;">Image Gallery using Css Grid</h1>
            <div style="padding: 0 15%; "">
-            <p style="margin-bottom: 1%;">CSS Grid is ideal for image galleries due to its two-dimensional layout capabilities, allowing precise control over both rows and columns. This results in flexible, responsive designs that automatically adjust to different screen sizes. Grid's features, like grid-template-areas, gap, and auto-placement, enable clean, maintainable code and consistent spacing, making it easier to create complex and visually appealing layouts compared to other layout methods.</p>
+            <p style="margin-bottom: 1%; font-size: 18px;">CSS Grid is ideal for image galleries due to its two-dimensional layout capabilities, allowing precise control over both rows and columns. This results in flexible, responsive designs that automatically adjust to different screen sizes. Grid's features, like grid-template-areas, gap, and auto-placement, enable clean, maintainable code and consistent spacing, making it easier to create complex and visually appealing layouts compared to other layout methods.</p>
             <button  class="learn-btn"><a href="https://www.youtube.com/watch?v=gvPyJ0rc944" target="_blank">Learn More</a></button>
            </div>
             </div>
